# pyBELLA

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.rst  LICENSE  README.md  Readme.md  Readme.rst  __main__.py  apis.html  changelog.html  dev-requirements.txt  genindex.html  index.html  numerics.html  objects.inv  output_travelling_vortex_3d_48_low_mach_gravity_comp.h5  plots_beautifier.ipynb  py-modindex.html  pyproject.toml  quickstart.html  refs.html  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: apis.doctree  changelog.doctree  environment.pickle  index.doctree  numerics.doctree  quickstart.doctree  refs.doctree
.ipynb_checkpoints/: plots_beautifier-checkpoint.ipynb
MatLab/: CheckSymmetries.m  CheckSymmetry.m  MS_height_test.m  Show_sequence.m  Show_sequence_3D.m  SymmetryTests.m  TravellingVortexPressure.m  make_plots.m  plots_acouwave.m  plots_baldauf.m  plots_internalwave.m  plots_internalwave_H_cmp.m  plots_internalwave_cmp.m  plots_straka.m  plots_straka_1dcuts.m  plots_vortex.m  plots_vortex_convergence.m  scaled_MS_height.m
RKLM_Python/: Readme.md  __init__.py  __main__.py  c6_gen.py  global_params.py  main.py  profiler.ipynb  queue_run.py  queue_run_lamb_forcing.py  queue_run_lamb_insta.py  queue_run_lamb_mixed.py  queue_run_lamb_restart.py  queue_run_lamb_unstable.py  results_gen.py  run.py  test.py  test_suite.py  tv_enda_tests.py
RKLM_Reference/: Common.h  Makefile  ProjectionType.h  hdf4-5_converter_viewer.ipynb  main.c  stencil_test.ipynb
RKLM_Reference.xcodeproj/: project.pbxproj
_sources/: changelog.rst.txt
_static/: documentation_options.js
(+647 files in other folders)
