[project]
name = "pyBELLA"
version = "0.50.1"

dependencies = [
    "dask==2022.7.0",
    "dill==0.3.6",
    "h5py==3.7.0",
    "matplotlib==3.5.1",
    "numba==0.56.4",
    "numpy==1.22.1",
    "PyYAML==6.0",
    "scipy==1.7.3",
    "termcolor==2.4.0"
]


# Packaging
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"pybella" = "src"}


# Change Log
[tool.towncrier]
package = "pyBELLA"
directory = "changelog.d"
filename = "CHANGELOG.rst"
underlines = ["-", "^"]

[[tool.towncrier.type]]
directory = "infrastructure"
name = "Infrastructure"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Improved Documentation"
showcontent = true